Some image fixes, scrollbar fixes

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -36,6 +36,7 @@ li {
     float: right;
     width: 50%;
     margin-left: 25px;
+    border-radius: 5px;
 }
 
 .page-content {
@@ -109,7 +110,6 @@ li {
 
 .menu-background {
     background: rgba(0, 0, 0, 0.6);
-    width: 100%;
     padding-left: 10px
 }
 
@@ -264,7 +264,7 @@ a.page-link:hover {
     float: right;
     margin-left: 15px;
     margin-bottom: 10px;
-    box-shadow: 0px 4px 4px black;
+    border-radius: 5px;
 }
 
 .book-content {
@@ -439,6 +439,10 @@ iframe{
 .contact-label {
     font-size: 16pt;
     color: #fbda4a
+}
+
+.award {
+    height: 200px; 
 }
 
 
